--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,26 @@
-<mat-toolbar color="primary">{{ title }}</mat-toolbar>
-<div>
-  <app-city-search (searchEvent)="doSearch($event)"></app-city-search>
-  <mat-card>
-    <mat-card-header>
-      <mat-card-title>
-        <h2>Current Weather</h2>
-      </mat-card-title>
-    </mat-card-header>
-    <app-current-weather [current]="currentWeather"></app-current-weather>
-  </mat-card>
-</div>
+<mat-toolbar color="primary">
+  <button mat-button (click)="sidenav.open()">
+    <mat-icon>menu</mat-icon>
+  </button>
+  {{ title }}
+
+</mat-toolbar>
+
+<mat-sidenav-container class="example-container" (backdropClick)="close('backdrop')">
+  <mat-sidenav #sidenav (keydown.escape)="close('escape')" disableClose>
+    <p><button mat-button (click)="close('toggle button')">Close</button></p>
+  </mat-sidenav>
+
+  <mat-sidenav-content class="example-sidenav-content">
+
+    <app-city-search (searchEvent)="doSearch($event)"></app-city-search>
+    <mat-card>
+      <mat-card-header>
+        <mat-card-title>
+          <h2>Current Weather</h2>
+        </mat-card-title>
+      </mat-card-header>
+      <app-current-weather [current]="currentWeather"></app-current-weather>
+    </mat-card>
+  </mat-sidenav-content>
+</mat-sidenav-container>
