--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,17 +1,26 @@
+mat-toolbar {
+  position: relative;
+}
+
 mat-sidenav-container {
   position: absolute;
-  /* top: 0; */
-  /* bottom: 0; */
   left: 0;
-  /* right: 0; */
   width: 100%;
   height: 100vh;
 }
 
 mat-sidenav {
-  width: 20%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 30%;
 }
 
 mat-sidenav-content {
   margin: 10%;
+}
+
+.default-city {
+  text-align: center;
 }
