--- a/src/app/current-weather/current-weather.component.html
+++ b/src/app/current-weather/current-weather.component.html
@@ -1,13 +1,15 @@
 <div *ngIf="current">
-  <div>
+  <div class="city-and-date">
     <span>{{current?.city}}, {{current?.country}}</span>
     <span>{{current?.date | date:'fullDate'}}</span>
   </div>
-  <div>
-    <img [src]='current.image'>
+  <div class="image-and-temp">
+    <div class="current-weather-img">
+      <img width="100px" [src]='current.image'>
+    </div>
     <span>{{current?.temperature | number:'1.0-0'}}℉</span>
   </div>
-  <div>
+  <div class="description">
     {{current?.description}}
   </div>
 </div>
